Refactor SSN handling and access control: update regex for SSN validation, add non-null constraints for `ssn_hash`, remove role-based SSN masking policy, and streamline encryption handling; update database seeding with ticket creation.